Al terminar partido poder poner el resultado